# python-postgres-docker

./: pyproject.toml
src/: server.py
src/config/: database.py
src/models/: manutencao_model.py
