[tool.poetry]
name = "aula-16"
version = "0.1.0"
description = "Projeto-Aula-16"
authors = ["DaneilBrisch <danielbrisch157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = "0.24.0"
psycopg2-binary = "2.9.9"
sqlmodel = "0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
